@startuml Global Search System - ER Diagram (Chen Notation)

' Use Chen notation style
skinparam shadowing false
skinparam linetype ortho

' Entities as rectangles
entity COMPANY {
}

entity USER {
}

entity LOCATION {
}

entity ZONE {
}

entity SENSOR {
}

entity SENSOR_DATA {
}

entity DASHBOARD {
}

entity REPORT {
}

entity AUDIT_LOG {
}

entity POLICY {
}

' Relationships as diamonds (using class with diamond stereotype)
class "has" <<(D,orchid)>> as has_loc
class "contains" <<(D,orchid)>> as contains
class "includes" <<(D,orchid)>> as includes
class "generates" <<(D,orchid)>> as generates
class "employs" <<(D,orchid)>> as employs
class "owns" <<(D,orchid)>> as owns
class "creates" <<(D,orchid)>> as creates
class "logs" <<(D,orchid)>> as logs

' Attributes as separate elements
together {
  object "<u>id</u>" as company_id
  object "name" as company_name
  object "tenant_id" as company_tenant
  object "industry" as company_industry
  object "status" as company_status
}

together {
  object "<u>id</u>" as user_id
  object "username" as user_username
  object "email" as user_email
  object "tenant_id" as user_tenant
  object "roles" as user_roles
}

together {
  object "<u>id</u>" as loc_id
  object "name" as loc_name
  object "address" as loc_address
  object "city" as loc_city
  object "status" as loc_status
}

together {
  object "<u>id</u>" as zone_id
  object "name" as zone_name
  object "type" as zone_type
  object "status" as zone_status
}

together {
  object "<u>id</u>" as sensor_id
  object "name" as sensor_name
  object "serial_number" as sensor_serial
  object "sensor_type" as sensor_type
  object "status" as sensor_status
}

together {
  object "<u>id</u>" as data_id
  object "value" as data_value
  object "timestamp" as data_timestamp
  object "tenant_id" as data_tenant
}

together {
  object "<u>id</u>" as dash_id
  object "name" as dash_name
  object "dashboard_type" as dash_type
}

together {
  object "<u>id</u>" as report_id
  object "name" as report_name
  object "status" as report_status
}

together {
  object "<u>id</u>" as audit_id
  object "action" as audit_action
  object "timestamp" as audit_timestamp
}

together {
  object "<u>id</u>" as policy_id
  object "name" as policy_name
  object "role" as policy_role
}

' Main hierarchy relationships
COMPANY "1" -- has_loc
has_loc -- "N" LOCATION
LOCATION "1" -- contains
contains -- "N" ZONE
ZONE "1" -- includes
includes -- "N" SENSOR
SENSOR "1" -- generates
generates -- "N" SENSOR_DATA

' User relationships
COMPANY "1" -- employs
employs -- "N" USER
USER "1" -- owns
owns -- "N" DASHBOARD
USER "1" -- creates
creates -- "N" REPORT
USER "1" -- logs
logs -- "N" AUDIT_LOG

' Connect attributes to COMPANY
company_id -- COMPANY
company_name -- COMPANY
company_tenant -- COMPANY
company_industry -- COMPANY
company_status -- COMPANY

' Connect attributes to USER
user_id -- USER
user_username -- USER
user_email -- USER
user_tenant -- USER
user_roles -- USER

' Connect attributes to LOCATION
loc_id -- LOCATION
loc_name -- LOCATION
loc_address -- LOCATION
loc_city -- LOCATION
loc_status -- LOCATION

' Connect attributes to ZONE
zone_id -- ZONE
zone_name -- ZONE
zone_type -- ZONE
zone_status -- ZONE

' Connect attributes to SENSOR
sensor_id -- SENSOR
sensor_name -- SENSOR
sensor_serial -- SENSOR
sensor_type -- SENSOR
sensor_status -- SENSOR

' Connect attributes to SENSOR_DATA
data_id -- SENSOR_DATA
data_value -- SENSOR_DATA
data_timestamp -- SENSOR_DATA
data_tenant -- SENSOR_DATA

' Connect attributes to DASHBOARD
dash_id -- DASHBOARD
dash_name -- DASHBOARD
dash_type -- DASHBOARD

' Connect attributes to REPORT
report_id -- REPORT
report_name -- REPORT
report_status -- REPORT

' Connect attributes to AUDIT_LOG
audit_id -- AUDIT_LOG
audit_action -- AUDIT_LOG
audit_timestamp -- AUDIT_LOG

' Connect attributes to POLICY
policy_id -- POLICY
policy_name -- POLICY
policy_role -- POLICY

note bottom
  **Chen Notation ER Diagram**

  Rectangles = Entities
  Diamonds (D) = Relationships
  Ovals = Attributes
  <u>Underlined</u> = Primary Key

  Cardinality: 1 : N (one-to-many)
end note

@enduml
